FusionDev Backup1/src/objects/ET_Subscribers__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ET Subscribers</relationshipLabel>
        <relationshipName>ET_Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ET Subscribers</relationshipLabel>
        <relationshipName>ET_Subscribers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ERP_Cust_Num__c</fullName>
        <label>ERP Cust Num</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ET_List_Name__c</fullName>
        <label>ET List Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ET_Lists_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ET Lists ID</label>
        <referenceTo>ET_Lists__c</referenceTo>
        <relationshipLabel>ET Subscribers</relationshipLabel>
        <relationshipName>ET_Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ET_Subscription_Status__c</fullName>
        <label>ET Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscribed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <label>Subscriber Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ET Subscribers</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ET Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ET Subscribers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>